src/objects/AccountOLD__e.object
<CustomObject>
    <description>Platform event published when an account is created, updated, deleted or undeleted</description>
    <fields>
        <fullName>AccountId__c</fullName>
        <description>Id of the Account which generate the event</description>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>The name of the record-type of the record published</description>
        <label>Recordtype</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of event</description>
        <label>Type</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>Account OLD</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>